Начальная стилизация - в процессе

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Перфораторы</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans:wght@400;700&display=swap">
+  <link href="normalize.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -16,7 +19,7 @@
       </form>
       <a href="blank.html">Закладки</a>
       <a href="blank.html">Корзина</a>
-      <button type="button">Оформить заказ</button> 
+      <a href="#">Оформить заказ</a> 
     </section>
     <div>
       <p>Интернет-магазин строительных 
