--- a/catalog.html
+++ b/catalog.html
@@ -3,47 +3,49 @@
 <head>
   <meta charset="utf-8">
   <title>Перфораторы</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans:wght@400;700&display=swap">
   <link href="normalize.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
   <header>
-    <section>
-      <a href="#"><img src="img/logo.svg" alt="Логотип магазина Техномарт"></a>
+    <section class="main-panel">
+      <a class="head-logo" href="#"><img src="img/logo.svg" alt="Логотип магазина Техномарт"></a>
       <h2 class="visually-hidden">Панель пользователя</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <label for="search" id="search">
-          <input type="search" name="search" id="search"  placeholder="Поиск"  aria-labelledby="search">
+        <label  class="search-field" for="search" id="search">
+          <input type="search" name="search" id="search" aria-labelledby="search" value="Поиск:">
         </label>
       </form>
-      <a href="blank.html">Закладки</a>
-      <a href="blank.html">Корзина</a>
-      <a href="#">Оформить заказ</a> 
+      <a class="user-bookmarks" href="blank.html">Закладки</a>
+      <a class="user-store-basket" href="blank.html">Корзина</a>
+      <a class="checkout-main-panel" href="#">Оформить заказ</a> 
     </section>
-    <div>
-      <p>Интернет-магазин строительных 
+    <div class="main-panel-authorization">
+      <p class="store-description">Интернет-магазин строительных 
         материалов и инструментов для ремонта
       </p>
       <div>
-        <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <a class="cont-number" href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
+        <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <div>
-        <button type="button">Войти</button>
-        <button type="button">Регистрация</button>
-        <a href="blank.html">
+        <button class="log-in" type="button">Войти</button>
+        <button class="registration" type="button">Регистрация</button>
+        <a class="user-panel" href="blank.html">
           <img src="img/icon_user.png" alt="Иконка-кнопка личного кабинета пользователя">
           Равшан Джамшутович
         </a>
-        <a href="blank.html">
+        <a class="user-panel" href="blank.html">
           <img src="img/icon_logout.png" alt="Иконка-кнопка для выхода из личного кабинета">
         </a>
-        <a href="blank.html">Мои заказы</a>
-        <a href="blank.html">Личный кабинет</a>
+        <div class="wrapper-account-panel">
+          <a href="blank.html">Мои заказы</a>
+          <a href="blank.html">Личный кабинет</a>
+        </div>
+        
       </div>  
     </div>
-    <section>
+    <section class="main-nav">
       <h2 class="visually-hidden">Главная навигация по страницам сайта</h2>
       <nav>
         <ul>
@@ -60,7 +62,7 @@
   </header>
   <main>
     <h1>Перфораторы</h1>
-    <section>
+    <section class="bread-crumbs">
       <h2 class="visually-hidden">Меню "хлебные крошки"</h2>
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
@@ -68,18 +70,18 @@
         <li><a href="catalog.html">Перфораторы</a></li>
       </ul>
     </section>
-    <section>
+    <section class="filter">
       <h2>Фильтр:</h2>
         <form action="https://echo.htmlacademy.ru/" method="post">
           <fieldset>
             <legend>Цена</legend>
             <label >
               <p class="visually-hidden">От:</p>
-              <input type="text" name="price_min" aria-label="Цена минимальная"></input> <!--цена мин-->
+              <input class="price-min" type="text" name="price_min" aria-label="Цена минимальная" value="0"></input> <!--цена мин-->
             </label>
             <label >
               <p class="visually-hidden">До:</p> 
-              <input type="text" name="price_max" aria-label="Цена максимальная"></input>   <!--цена макс-->
+              <input class="price-max" type="text" name="price_max" aria-label="Цена максимальная" value="3000"></input>   <!--цена макс-->
             </label>
             <div></div> <!--Ползунок цены-->
           </fieldset>
@@ -138,7 +140,7 @@
           <button type="submit">Показать</button>
         </form>
     </section>
-    <section>
+    <section class="sorting">
       <h2>Сортировка:</h2>
       <p>По цене</p>
       <p>По типу</p>
@@ -146,107 +148,100 @@
       <button type="button" aria-label="Кнопка сортировки вверх">up</button>
       <button type="button" aria-label="Кнопка сортировки вниз" >down</button>
     </section>
-    <section>
-      <h2>Карточки товаров</h2>
+    <section class="product-cards">
+      <h2 class="visually-hidden">Карточки товаров</h2>
         <article>
-          <h3 class="visually-hidden">Перфоратор Bosch bfg 6000</h3>
+          <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
+          <p class="old-price">30500 Р.</p>
+          <p class="new-price">25500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
+          <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
+          <p class="old-price">30500 Р.</p>
+          <p class="new-price">25500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
+          <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
+          <p class="old-price">30500 Р.</p>
+          <p class="new-price">25500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 3000</h3>
+          <h3>Перфоратор <span>Bosch bfg 3000</span> </h3>
           <img src="img\bosch_3000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
+          <p class="old-price">22500 Р.</p>
+          <p class="new-price">15500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
+          <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
+          <p class="old-price">30500 Р.</p>
+          <p class="new-price">25500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 2000</h3>
+          <h3>Перфоратор <span>Bosch bfg 2000</span> </h3>
           <img src="img\bosch_2000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>30500 Р.</p>
-          <p>12500 Р.</p>
+          <p class="old-price">30500 Р.</p>
+          <p class="new-price">12500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 3000</h3>
+          <h3>Перфоратор <span>Bosch bfg 3000</span> </h3>
           <img src="img\bosch_3000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
+          <p class="old-price">22500 Р.</p>
+          <p class="new-price">15500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
+          <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
+          <p class="old-price">30500 Р.</p>
+          <p class="new-price">25500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 2000</h3>
+          <h3>Перфоратор <span>Bosch bfg 2000</span> </h3>
           <img src="img\bosch_2000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
-          <p>30500 Р.</p>
-          <p>12500 Р.</p>
+          <p class="old-price">30500 Р.</p>
+          <p class="new-price">12500 Р.</p>
         </article>
     </section>
-    <section>
-      <h2 class="visually-hidden">Корзина</h2>
-      <p>Товар добавлен в корзину!</p>
-      <a href="blank.html">Оформить заказ</a>
-      <button type="button">Продолжить покупки</button>
-      <button type="button" aria-label="Закрыть окно корзины">Закрыть</button>
-    </section>
-    <section>
+    <section class="page-navigation">
       <h2 class="visually-hidden">Навигация по страницам</h2>
       <ul>
         <li><a href="#"></a>1</li>
@@ -262,40 +257,51 @@
         В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </section>
   </main>
-  <footer>
-    <a href="#"><img src="img/logo_footer.svg" alt="Логотип магазина"></a>
-    <section>
-      <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
-      <nav>
-        <ul>
-          <li><a href="blank.html">Компания</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Контакты</a></li>
-        </ul>
-      </nav>
-    </section>  
-    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a></p>
-    <section>
-      <h2 class="visually-hidden">навигация по товарам\услугам</h2>
-      <nav>
-        <ul>
-          <li><a href="blank.html">Материалы</a></li>
-          <li><a href="blank.html">Техника</a></li>
-          <li><a href="blank.html">Инструмент</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li> 
-        </ul>
-      </nav>
-    </section>
-    <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
-      <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+  <footer class="footer">
+    <a href="#" class="logo-footer"><img src="img/logo_footer.svg" alt="Логотип магазина"></a>
+    <div class="footer-wrapper-main">
+      <section>
+        <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
+        <nav class="footer-nav">
+          <ul>
+            <li><a href="blank.html">Компания</a></li>
+            <li><a href="blank.html">Новости</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="blank.html">Доставка</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
+        </nav>
+      </section>  
+      <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a></p>
+      <section>
+        <h2 class="visually-hidden">навигация по товарам\услугам</h2>
+        <nav>
+          <ul class="footer-services">
+            <li><a href="blank.html">Материалы</a></li>
+            <li><a href="blank.html">Техника</a></li>
+            <li><a href="blank.html">Инструмент</a></li>
+            <li><a href="blank.html">Спецпредложения</a></li> 
+          </ul>
+        </nav>
+      </section>
+    </div>
+    <section class="second-footer-section">
+    <p class="copyright-company">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+      <ul class="social-icons">
+        <li><a class="vk-link" href="#">Вконтакте</a></li>
+        <li><a class="fb-link" href="#">Фейсбук</a></li>
+        <li><a class="inst-link" href="#">Инстаграм</a></li>
       </ul>
-    <p>Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-    <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+    <p class="feedback-info">Обратная связь:<br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+    <p class="developed-by">Разработано —<br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+    </section>
   </footer>
+  <section class="store-basket">
+    <h2 class="visually-hidden">Корзина</h2>
+    <p>Товар добавлен в корзину!</p>
+    <a href="blank.html">Оформить заказ</a>
+    <button type="button">Продолжить покупки</button>
+    <button type="button" aria-label="Закрыть окно корзины">Закрыть</button>
+  </section>
 </body>
 </html>
