--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans:wght@400;700&display=swap">
     <link href="normalize.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
   </head>
@@ -13,12 +12,12 @@
         <a class="head-logo" href="#"><img src="img/logo.svg" alt="Логотип магазина Техномарт"></a>
         <h2 class="visually-hidden">Панель пользователя</h2>
         <form action="https://echo.htmlacademy.ru" method="post">
-          <label  for="search" id="search">
-            <input type="search" name="search" id="search"  placeholder="Поиск"  aria-labelledby="search">
+          <label  class="search-field" for="search" id="search">
+            <input type="search" name="search" id="search" aria-labelledby="search" value="Поиск:">
           </label>
         </form>
-        <a href="blank.html">Закладки</a>
-        <a href="blank.html">Корзина</a>
+        <a class="user-bookmarks" href="blank.html">Закладки</a>
+        <a class="user-store-basket" href="blank.html">Корзина</a>
         <a class="checkout-main-panel" href="#">Оформить заказ</a> 
       </section>
       <div class="main-panel-authorization">
@@ -30,13 +29,13 @@
           <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div>
-          <button type="button">Войти</button>
-          <button type="button">Регистрация</button>
-          <a href="blank.html">
+          <button class="log-in" type="button">Войти</button>
+          <button class="registration" type="button">Регистрация</button>
+          <a class="user-panel" href="blank.html">
             <img src="img/icon_user.png" alt="Иконка-кнопка личного кабинета пользователя">
             Равшан Джамшутович
           </a>
-          <a href="blank.html">
+          <a class="user-panel" href="blank.html">
             <img src="img/icon_logout.png" alt="Иконка-кнопка для выхода из личного кабинета">
           </a>
           <div class="wrapper-account-panel">
@@ -104,15 +103,15 @@
           <!-- <span>радио точка</span> -->
         </article>
       </section>
-      <section>
+      <section section class="product-cards">
         <h2>Популярные товары:</h2>
         <a href="catalog.html">На все популярные товары</a>
         <article>
           <h3>Перфоратор Bosch bfg 9000</h3>
           <img src="img/bosch_9000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 9000">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
           <p>32500 Р.</p>
           <p>25500 Р.</p>
@@ -121,8 +120,8 @@
           <h3>Перфоратор Bosch bfg 3000</h3>
           <img src="img\bosch_3000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 3000">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
@@ -131,8 +130,8 @@
           <h3>Перфоратор Bosch bfg 6000</h3>
           <img src="img\bosch_6000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 6000">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
@@ -141,14 +140,14 @@
           <h3>Перфоратор Bosch bfg 2000</h3>
           <img src="img\bosch_2000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 2000">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="button-buy">Купить</button>
+            <button class="to-bookmarks">В закладки</button>
           </div>
           <!-- <p>12500 Р.</p> -->
           <p>12500 Р.</p>
         </article>
       </section>
-      <section>
+      <section class="popular-manufacturers">
         <h2>Популярные производители</h2>
         <a href="catalog.html">Все производители</a>
         <ul>
@@ -232,72 +231,77 @@
         <a href="#"><img src="img\map.jpg" alt="Изображение магазина на карте города"></a>
         <button type="button">Заблудились? Напишите нам!</button> 
       </section>
-      <section>
-        <h2 class="visually-hidden">Напишите нам</h2>
-        <form action="https://echo.htmlacademy.ru" method="post">
-          <p>
-            <label>
-            Ваше имя:
-            <input type="text" name="name" placeholder="Имя Фамилия"> 
-            </label>
-          </p>
-          <p>
-            <label>
-            Ваша e-mail:
-            <input type="e-mail" name="e-mail" placeholder="email@example.com">
-            </label>
-          </p>
-          <p>
-            <label>
-            Текс письма:
-            <input type="text" name="content_letter" placeholder="В свободной форме">
-            </label>
-          </p>
-          <button type="submit">Отправить</button>
-        </form>
-        <button type="button" aria-label="Закрыть окно обратной связи">Закрыть</button>
-      </section>
-      <section> 
-        <h2 class="visually-hidden">Виджет карты города</h2>
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A12307483c981de1bff2ca94339040183ba5f9de282b3f0b2ccdae7b0bd9d4814&amp;source=constructor" width="500" height="400" frameborder="0">
-        </iframe>
-        <button type="button" aria-label="Закрыть окна карты">Закрыть</button>
-      </section>
+     
     </main>
-    <footer>
-      <a href="#"><img src="img/logo_footer.svg" alt="Логотип магазина"></a>
-      <section>
-        <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
-        <nav>
-          <ul>
-            <li><a href="blank.html">Компания</a></li>
-            <li><a href="blank.html">Новости</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="blank.html">Доставка</a></li>
-            <li><a href="blank.html">Контакты</a></li>
-          </ul>
-        </nav>
-      </section>  
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a></p>
-      <section>
-        <h2 class="visually-hidden">навигация по товарам\услугам</h2>
-        <nav>
-          <ul>
-            <li><a href="blank.html">Материалы</a></li>
-            <li><a href="blank.html">Техника</a></li>
-            <li><a href="blank.html">Инструмент</a></li>
-            <li><a href="blank.html">Спецпредложения</a></li> 
-          </ul>
-        </nav>
-      </section>
-      <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
-        <ul>
-          <li><a href="#">Вконтакте</a></li>
-          <li><a href="#">Фейсбук</a></li>
-          <li><a href="#">Инстаграм</a></li>
+    <footer class="footer">
+      <a href="#" class="logo-footer"><img src="img/logo_footer.svg" alt="Логотип магазина"></a>
+      <div class="footer-wrapper-main">
+        <section>
+          <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
+          <nav class="footer-nav">
+            <ul>
+              <li><a href="blank.html">Компания</a></li>
+              <li><a href="blank.html">Новости</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="blank.html">Доставка</a></li>
+              <li><a href="blank.html">Контакты</a></li>
+            </ul>
+          </nav>
+        </section>  
+        <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a></p>
+        <section>
+          <h2 class="visually-hidden">навигация по товарам\услугам</h2>
+          <nav>
+            <ul class="footer-services">
+              <li><a href="blank.html">Материалы</a></li>
+              <li><a href="blank.html">Техника</a></li>
+              <li><a href="blank.html">Инструмент</a></li>
+              <li><a href="blank.html">Спецпредложения</a></li> 
+            </ul>
+          </nav>
+        </section>
+      </div>
+      <section class="second-footer-section">
+      <p class="copyright-company">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+        <ul class="social-icons">
+          <li><a class="vk-link" href="#">Вконтакте</a></li>
+          <li><a class="fb-link" href="#">Фейсбук</a></li>
+          <li><a class="inst-link" href="#">Инстаграм</a></li>
         </ul>
-      <p>Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-      <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+      <p class="feedback-info">Обратная связь:<br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+      <p class="developed-by">Разработано —<br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+      </section>
     </footer>
+    <section class="feedback-popup">
+      <h2 class="visually-hidden">Напишите нам</h2>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <p>
+          <label>
+          Ваше имя:
+          <input type="text" name="name" placeholder="Имя Фамилия"> 
+          </label>
+        </p>
+        <p>
+          <label>
+          Ваша e-mail:
+          <input type="e-mail" name="e-mail" placeholder="email@example.com">
+          </label>
+        </p>
+        <p>
+          <label>
+          Текс письма:
+          <input type="text" name="content_letter" placeholder="В свободной форме">
+          </label>
+        </p>
+        <button type="submit">Отправить</button>
+      </form>
+      <button type="button" aria-label="Закрыть окно обратной связи">Закрыть</button>
+    </section>
+    <section class="map-widget"> 
+      <h2 class="visually-hidden">Виджет карты города</h2>
+      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A12307483c981de1bff2ca94339040183ba5f9de282b3f0b2ccdae7b0bd9d4814&amp;source=constructor" width="500" height="400" frameborder="0">
+      </iframe>
+      <button type="button" aria-label="Закрыть окна карты">Закрыть</button>
+    </section>
   </body>
 </html>
